WIP Fixing project visual alignment issues
- set minimal height of videos so they are aligned with pictures
- To solve project containers and data inside alignment issues; all project details placed in a new container inside of the old container.

--- a/portfolio/src/components/project/project.scss
+++ b/portfolio/src/components/project/project.scss
@@ -1,15 +1,21 @@
 
 .project-container {
-    margin: 1vh;
-    border: solid 1px lightgrey;
     padding-left:0px;
     padding-right: 0px;
 }
 
+.data-container {
+    margin: 1vw;
+    border: solid 1px lightgrey;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
 
 .tech-image-style {
     flex: 1;
-    padding: .5vw;//w
+    padding: .5vw;
 }
 
 .project-display-tech {
@@ -30,7 +36,7 @@
 }
 
 .image-white-space {
-    margin-bottom: 1vh;
+    //margin-bottom: 1vh;
     height: 315px;
 }
 
@@ -41,5 +47,6 @@
 .video-style {
     width: 100%;
     height:42vh;
+    min-height: 315px;
     vertical-align: middle;
 }
